# VoiceControl

./: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
VoiceControl/: VoiceControl.py  __init__.py  offboard_control_dk.py  offboard_control_tst.py  runner.py
script/: PX4_uXRCE_QGC.sh  Setup_ROS2Offboard.sh  Start.sh  VoiceControl_Drone.sh  env.sh  proxy.sh  vcnode_only.sh
