<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>VoiceControl</name>
  <version>0.0.0</version>
  <description>AI Agent</description>
  <maintainer email="michall@gmail.com">michall</maintainer>
  <license>Apache-2.0</license>
  
  <depend>px4_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>langchain_community</exec_depend>
  <exec_depend>langchain_core</exec_depend>
  <exec_depend>langchain</exec_depend>
  <exec_depend>langgraph</exec_depend>
  <exec_depend>speech_recongition</exec_depend>
  <exec_depend>asyncio</exec_depend>
  <exec_depend>edge_tts</exec_depend>
  <exec_depend>pygame</exec_depend>
  <exec_depend>dotenv</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
